# CellCounter

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: ci.yml  release.yml
CellCounting/: CellCounting.entitlements  CellCountingApp.swift
CellCounting.xcodeproj/: project.pbxproj
CellCounting/Detection/: AnnotationMatcher.swift  CellposeDetectionService.swift  CellposeDownloader.swift  CellposeSAMDetectionService.swift  CellposeSAMDownloader.swift  DetectionService.swift  DetectorRegistry.swift  InstallStateCache.swift  PythonModuleImportCache.swift  SAMDetectionService.swift  SAMDownloader.swift  SidecarProcessRunner.swift  SidecarSchema.swift  StarDistDetectionService.swift  StarDistDownloader.swift  WeightDownloader.swift  YOLODetectionService.swift  YOLODownloader.swift
CellCounting/Domain/: Batch.swift  CalibrationPreset.swift  Cell.swift  CellImage.swift  DetectionModel.swift  NumberFormatting.swift  SizeBin.swift
CellCounting/Persistence/: FileStore.swift  Records.swift  Repositories.swift
CellCounting/Services/: Cellpose4Availability.swift  CellposeAvailability.swift  CellposeInstaller.swift  CellposeSAMInstaller.swift  ChildProcessTracker.swift  DetectionChannels.swift  EXIFCalibration.swift  ExportService.swift  ImageLoader.swift  OpenPanel.swift  PDFReportGenerator.swift  ProvenanceMetadata.swift  PythonRuntime.swift  RollbackService.swift  SecurityBookmarks.swift  Statistics.swift  TrainingService.swift
CellCounting/Shared/: AppState.swift  Atoms.swift  CellSampleImage.swift  Notifications.swift  ProceduralCells.swift
CellCounting/Theme/: AppTheme.swift  Iconography.swift  OKLCH.swift  Tokens.swift
CellCounting/Views/Batch/: BatchView.swift
CellCounting/Views/Compare/: CompareView.swift
CellCounting/Views/EmptyState/: QueueView.swift
CellCounting/Views/FineTune/: FineTuneSteps.swift  FineTuneView.swift
CellCounting/Views/Home/: HomeView.swift
CellCounting/Views/Modals/: CalibrationSheet.swift  DuplicateImportSheet.swift  InstallCellpose4Sheet.swift  InstallCellposeSheet.swift  KeyboardShortcutsSheet.swift  SupportSheet.swift
CellCounting/Views/Models/: InstallCellposeBanner.swift  ModelLineagePopover.swift  ModelsView.swift
CellCounting/Views/Results/: AnalysisPanel.swift  ColoniesPanel.swift  EditableOverlay.swift  EditableROI.swift  IntensityHistogram.swift  LineProfileTool.swift  NotesPanel.swift  QCBadges.swift  ROIFiltered.swift  ResultsExportPanel.swift  ResultsView.swift  RetrainAndAdvanceBanner.swift  RetrainBanner.swift  SplitTouchingButton.swift
CellCounting/Views/Review/: ReviewQueueView.swift
CellCounting/Views/Root/: AppToolbar.swift  RootView.swift  Sidebar.swift  SidebarReviewExt.swift
CellCounting/Views/Settings/: SettingsView.swift
CellCounting/python/: _cellpose_common.py  _export_imagej_roi.py  cellpose4_detect.py  cellpose_detect.py  cellpose_train.py  sam_detect.py
CellCounting/scripts/: _lib_install.sh  install_python.sh  install_python_cp4.sh
CellCountingTests/: CellCountingTests.swift
CellCountingUITests/: CellCountingUITests.swift  CellCountingUITestsLaunchTests.swift
Resources/python/: _colony.py  _preprocessing.py  cellpose_detect.py  stardist_detect.py
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json
desktop/python/: _cellpose_common.py  _colony.py  _preprocessing.py  _seg_npy_io.py  _watershed.py  cellpose4_detect.py  cellpose_detect.py  pyproject.toml
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  paths.rs  proc.rs
desktop/src-tauri/src/db/: mod.rs  models.rs  repo.rs  schema.rs
desktop/src-tauri/src/detection/: ipc.rs  mod.rs  seg_npy.rs  sidecar.rs
desktop/src-tauri/src/env/: mod.rs  uv.rs
desktop/src-tauri/src/export/: csv.rs  mod.rs  provenance.rs  report.rs  roi.rs
desktop/src-tauri/src/images/: importer.rs  mod.rs
desktop/src/components/: ExportPanel.tsx  Icon.tsx  KeyboardShortcutsSheet.tsx  Sidebar.tsx  StubPage.tsx  TitleBar.tsx  appInit.ts  routes.tsx  useFocusTrap.ts  useHashRoute.ts  useKeymap.ts
desktop/src/kernel/: types.ts
desktop/src/kernel/calibration/: calibration.ts
desktop/src/kernel/overlay/: MaskEditEngine.ts  MaskOverlay.tsx
desktop/src/kernel/persistence/: PersistencePort.ts  TauriSqlitePort.ts  index.ts
desktop/src/kernel/shortcuts/: keymap.ts
desktop/src/kernel/stats/: histogram.ts  stats.ts
desktop/src/kernel/store/: store.ts
desktop/src/kernel/theme/: binColors.ts
desktop/src/kernel/transport/: InferenceTransport.ts  TauriSidecarTransport.ts  index.ts
desktop/src/kernel/viewport/: Viewport.tsx  useMeasuredSize.ts  useViewportTransform.ts
desktop/src/pages/batch/: BatchPage.css  BatchPage.tsx  BatchTable.tsx  SizeDistBar.tsx  batchStats.ts  useBatchData.ts  useMeasuredSize.ts
desktop/src/pages/compare/: ChipRow.tsx  ComparePage.css  ComparePage.tsx  ConditionPanel.tsx  MannWhitneyPanel.tsx  PooledHistogram.tsx  binColors.ts  compareCsv.ts  comparePooling.ts  histogram.ts  useCompareData.ts
desktop/src/pages/home/: DuplicatePrompt.tsx  HomePage.tsx  fileSources.ts  home.css  importFlow.ts  useRecents.ts
desktop/src/pages/models/: ModelsPage.tsx  catalog.ts  models.css  useModelInstall.ts
desktop/src/pages/onboarding/: CalibrationModal.tsx  ManualDiameterField.tsx  OnboardingModal.tsx  OnboardingPage.tsx  OnboardingRoot.tsx  illustrations.tsx  onboarding.css  onboardingController.ts
desktop/src/pages/processing/: ProcessingPage.tsx  processing.css  processingController.ts
desktop/src/pages/results/: AnalysisSidebar.tsx  IntensityHistogram.tsx  OverlayControls.tsx  QCBadges.tsx  ResultsPage.tsx  binColors.ts  histogram.ts  results.css  roiFilter.ts  useResultsData.ts
desktop/src/pages/review/: ReviewCard.tsx  ReviewPage.tsx  review.css  reviewCrop.ts  useReviewQueue.ts
desktop/src/styles/: shell.css  theme.css
docs/: ARCHITECTURE.md  INSTALL.md  RESEARCHER_FEEDBACK_FIXES.md  tasks.json
scripts/: install_python.sh
(+14 files in other folders)
