[package]
name = "desktop"
version = "0.1.0"
description = "CellCounter: a desktop app for counting and size-classifying cells in microscopy images."
authors = ["Alperen Gur <alguer@ethz.ch>"]
license = "MIT"
repository = "https://github.com/Alperen-Gur/CellCounter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Native file dialogs (Choose images… / Choose folder…) + folder-walk fs access.
# The frontend loads @tauri-apps/plugin-dialog / -fs lazily (pages/home/fileSources.ts,
# pages/results/segnpy/SegNpyPanel.tsx) and degrades to drag-and-drop when absent;
# these crates + the dialog:default/fs:default capabilities light the picker CTAs up.
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- kernel backend deps (ARCHITECTURE.md §2 Cargo.toml note) ---
# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }
# Image import: decode jpg/png/tif/bmp + write JPEG thumbnail
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "bmp"] }
# EXIF / TIFF tag probing (OME-XML / baseline / ImageJ / Olympus lives in ImageDescription + resolution tags)
kamadak-exif = "0.6"
# Whole-file SHA-256 dedup
sha2 = "0.10"
# UUID v4 ids for rows / cells / runs
uuid = { version = "1", features = ["v4"] }
# Async command bodies + sidecar process management
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
# Cross-platform process enumeration + kill for the launch orphan sweep
# (replaces the Unix-only `/bin/ps` scrape; works on macOS/Linux/Windows).
# We only use the process table (`System::processes()` + `Process::kill()`),
# which lives under the default `system` feature; default features are kept for
# maximum build-config robustness (the extra probes are never invoked at runtime
# — the sweep runs once at launch).
sysinfo = "0.32"
# Structured error types
thiserror = "2"
# ISO-8601 timestamps (importedAt / ranAt / createdAt)
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

